2001-10-12  Philippe Elie  <ph_e@club-internet.fr>

	* gui/oprof_start_util.cpp: use select() rather non-blocking
	  mode to read output from the child process

2001-10-11  Philippe Elie  <ph_e@club-internet.fr>

	* doc/oprofile.sgml
	* doc/oprofile.1.in
	* pp/opf_filter: make --output and --no-output more intuitive

2001-10-09  Philippe Elie  <ph_e@club-internet.fr>

	* doc/oprofile.sgml:
	* doc/oprofile.1.in: clarify doc
	* pp/opf_filter.cpp: corner case fix in --output-dir and
	  --source-dir handling.

2001-10-08  John Levon  <moz@compsoc.man.ac.uk>

	* acinclude.m4:
	* configure.in:
	* gui/Makefile.in: fix idiot config bug of mine
 
2001-10-06  Philippe Elie  <ph_e@club-internet.fr>

	* pp/opf_filter.cpp:
	* pp/op_to_source: small cleanup

2001-10-05  Philippe Elie  <ph_e@club-internet.fr>

	* doc/oprofile.1.in:
	* doc/oprofile.sgml:
	* pp/op_to_source:
	* pp/opf_filter.cpp: implement --output and --no-output to
 	  allow output file generation filtering

2001-10-04  John Levon  <moz@compsoc.man.ac.uk>

	* TODO: update
 
2001-10-03  Philippe Elie  <ph_e@club-internet.fr>

	* doc/oprofile.1.in:
	* doc/oprofile.sgml:
	* pp/op_to_source:
	* pp/opf_filter.cpp: implement --source-dir and --output-dir
	  to generated separated annoted source file.

2001-10-03  Philippe Elie  <ph_e@club-internet.fr>

	* pp/oprofpp.cpp
	* pp/oprofpp.h
	* pp/opf_filter.cpp: minor cleanup

2001-10-03  John Levon  <moz@compsoc.man.ac.uk>

	* TODO: update

	* Makefile.in: remove generated files on make distclean

	* acinclude.m4: update from source
 
2001-10-02  Philippe Elie  <ph_e@club-internet.fr>

	* pp/oprofpp.cpp: fix a silly bug in do_list_symbols (oprofpp -l)

2001-10-02  John Levon  <moz@compsoc.man.ac.uk>

	* doc/oprofile.sgml: fix

	* Makefile.in: dist fix
 
2001-10-02  John Levon  <moz@compsoc.man.ac.uk>

	* TODO: update

	* configure.in: -> 0.0.5 for release
 
2001-10-01  Philippe Elie  <ph_e@club-internet.fr>

	* pp/opf_container.cpp:
	* pp/opf_filter.h: comment